WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87056
Flash player buttons do not work when page is zoomed in
https://bugs.webkit.org/show_bug.cgi?id=87056
Summary
Flash player buttons do not work when page is zoomed in
Anders Carlsson
Reported
2012-05-21 16:20:51 PDT
Flash player buttons do not work when page is zoomed in
Attachments
Patch
(2.20 KB, patch)
2012-05-21 16:25 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(6.18 KB, patch)
2012-05-21 17:58 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(6.21 KB, patch)
2012-05-21 18:31 PDT
,
Anders Carlsson
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-05-21 16:25:51 PDT
Created
attachment 143127
[details]
Patch
Darin Adler
Comment 2
2012-05-21 16:26:24 PDT
Comment on
attachment 143127
[details]
Patch Regression test?
Anders Carlsson
Comment 3
2012-05-21 17:58:32 PDT
Created
attachment 143154
[details]
Patch
Build Bot
Comment 4
2012-05-21 18:19:54 PDT
Comment on
attachment 143154
[details]
Patch
Attachment 143154
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12730831
Anders Carlsson
Comment 5
2012-05-21 18:31:17 PDT
Created
attachment 143161
[details]
Patch
Anders Carlsson
Comment 6
2012-05-21 18:54:38 PDT
Committed
r117869
: <
http://trac.webkit.org/changeset/117869
>
Alexey Proskuryakov
Comment 7
2012-05-22 11:28:52 PDT
<
rdar://problem/11491501
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug