Flash player buttons do not work when page is zoomed in https://bugs.webkit.org/show_bug.cgi?id=87056 <rdar://problem/11491501>

Reviewed by Oliver Hunt.

Source/WebKit2:

Use the page scale factor when computing the plug-in to root view transform, otherwise we'll compute an
incorrect transform for plug-ins inside subframes. Also, make sure that viewGeometryDidChange is called for all plug-ins
when scaling the page since otherwise it won't be called unless the scroll position changes.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::pageScaleFactorDidChange):
(WebKit):
(WebKit::PluginView::viewGeometryDidChange):
* WebProcess/Plugins/PluginView.h:
(PluginView):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::scalePage):

LayoutTests:

* platform/mac-wk2/plugins/mouse-events-scaled-iframe-expected.txt: Added.
* platform/mac-wk2/plugins/mouse-events-scaled-iframe.html: Added.

Canonical link: https://commits.webkit.org/104734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117869 268f45cc-cd09-0410-ab3c-d52691b4dbfc